<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/result"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOperator1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_1"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOperator2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_2"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOperator3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_3"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOperator4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_4"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOperator5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_5"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOperator6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_6"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOperator7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_7"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOperator8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_8"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOperator9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_9"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOperator10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_10"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOperator11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_11"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOperator12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_12"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOperator13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_13"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>