<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2016 Harsh Patel
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
     http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_observable"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defer_observable"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_observable"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interval_observable"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/just_observable"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/range_observable"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer_observable"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filtering_observable"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/combining_observable"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miscellaneous_observable"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_file_using_rxjava"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>