<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/result"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCombine1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/combine_1"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCombine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/combine_2"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCombine3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/combine_3"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>